correct z-index of top class and add top to flash

--- a/app/styles/app/layouts/top.scss
+++ b/app/styles/app/layouts/top.scss
@@ -56,7 +56,7 @@
   top: 0;
   left: 0;
   right: 0;
-  z-index: 1000;
+  @include z-index(above);
 }
 
 .top.scrolled {
